Made changes for Meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content=Shubham Gadre | .Net developer>
+    <meta property="og:site_name" content=Shubham>
+    <meta property="og:url" content=https://shubhamgadre.vercel.app/>
+    <meta property="og:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
+    <meta property="og:type" content=profile>
+    <meta property="og:image" content=blob:https://vercel.com/bce62811-fb05-46df-8206-26fc07f0848c>
     <link rel="icon" type="image" href="./src/assets/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shubham | Portfolio</title>
