--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:title" content="Shubham Gadre | .Net developer">
-    <meta property="og:site_name" content="Shubham Gadre">
-    <meta property="og:url" content="https://shubhamgadre.vercel.app"/>
-    <meta property="og:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
-    <meta property="og:type" content="profile">
-    <meta property="og:image" content="https://asset.cloudinary.com/dzsi7rkti/374ce1206256f194ac45eeac520e1744">
+
+<!-- Primary Meta Tags -->
+<title>Shubham Gadre | .Net developer</title>
+<meta name="title" content="Shubham Gadre | .Net developer">
+<meta name="description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://shubhamgadre.vercel.app/">
+<meta property="og:title" content="Shubham Gadre | .Net developer">
+<meta property="og:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
+<meta property="og:image" content="https://asset.cloudinary.com/dzsi7rkti/374ce1206256f194ac45eeac520e1744">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://shubhamgadre.vercel.app/">
+<meta property="twitter:title" content="Shubham Gadre | .Net developer">
+<meta property="twitter:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
+<meta property="twitter:image" content="https://asset.cloudinary.com/dzsi7rkti/374ce1206256f194ac45eeac520e1744">
+
     <link rel="icon" type="image" href="./src/assets/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shubham | Portfolio</title>
