--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <meta property="og:url" content="https://shubhamgadre.vercel.app/">
 <meta property="og:title" content="Shubham Gadre | .Net developer">
 <meta property="og:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
-<meta property="og:image" content="https://asset.cloudinary.com/dzsi7rkti/374ce1206256f194ac45eeac520e1744">
+<meta property="og:image" content="./src/assets/heroImage.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://shubhamgadre.vercel.app/">
 <meta property="twitter:title" content="Shubham Gadre | .Net developer">
 <meta property="twitter:description" content="I'm a rookie and an enthusiastic Software developer ready to learn, having experience in .Net core, MVC, MVVM, HTML5, CSS3, Bootstrap, SQL Server, C#, and also well versed with OOP's concept. I am a computer science bachelor constantly looking for ways to learn and improve.">
-<meta property="twitter:image" content="https://asset.cloudinary.com/dzsi7rkti/307b0e45648a420585f5c3f03aced1b1">
+<meta property="twitter:image" content="./src/assets/heroImage.png">
 
     <link rel="icon" type="image" href="./src/assets/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
